--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express-path-tester",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/express-path-tester",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
